--- a/pyetl_webapp/templates/index.html
+++ b/pyetl_webapp/templates/index.html
@@ -3,8 +3,7 @@
 
 {% block content %}
 
-
-       <img>ressources/rt.gif</img>
+       <img src="{{url_for('static', filename='rt.gif')}}">
        <h1>Hello!</h1>
        <h1>{{ text }}!</h1>
 
