--- a/pyetl_webapp/templates/index.html
+++ b/pyetl_webapp/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 
        <img src="{{url_for('static', filename='rt.gif')}}">
-       <h1>Hello!</h1>
+       <h1>Mapper web interface</h1>
        <h1>{{ text }}!</h1>
 
 {% endblock %}
