--- a/pyetl_webapp/templates/index.html
+++ b/pyetl_webapp/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-       <img src="{{url_for('static', filename='rt.gif')}}">
+       <img src="{{url_for('static', filename='images/rantanplan.gif')}}">
        <h1>Mapper web interface</h1>
        <h1>{{ text }}!</h1>
 
