--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -12,6 +12,7 @@
         <div><a href="/index">Home</a></div>
         <div><a href="{{url_for('static', filename='doc_pyetl/build/html/index.html')}}">Help</a></div>
         <div><a href="/scripts">traitements disponibles</a></div>
+        <div><a href="/macros">macros disponibles</a></div>
         <hr>
         {% block content %}{% endblock %}
     </body>
