--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -9,11 +9,23 @@
     </head>
     <body>
         <link rel="shortcut icon" href="{{url_for('static', filename='images/favicon.ico')}}">
-        <div><a href="/index">Home</a></div>
-        <div><a href="{{url_for('static', filename='doc_pyetl/build/html/index.html')}}">Help</a></div>
-        <div><a href="/scripts">traitements disponibles</a></div>
-        <div><a href="/macros">macros disponibles</a></div>
+        <div>
+          <a href="/index">Home</a>
+          <a href="/login">login</a>
+          <a href="/scripts">traitements</a>
+          <a href="/macros">macros</a>
+          <a href="{{url_for('static', filename='doc_pyetl/build/html/index.html')}}">Help</a>
+        </div>
         <hr>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
         {% block content %}{% endblock %}
     </body>
 </html>
