--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -6,9 +6,9 @@
       <title>Mapper - Home</title>
       {% endif %}
       <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+      <link rel="icon" href="{{url_for('static', filename='images/favicon.ico')}}">
     </head>
     <body>
-        <link rel="shortcut icon" href="{{url_for('static', filename='images/favicon.ico')}}">
         <div>
           <a href="/index">Home</a>
           <a href="/login">login</a>
