--- a/pyetl_webapp/templates/scriptview.html
+++ b/pyetl_webapp/templates/scriptview.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <title>nom</title>
+    <h1>{{ nom }}</h1>
     <table>
     <thead>
         <tr>
