--- a/pyetl_webapp/templates/index.html
+++ b/pyetl_webapp/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
        <h1>Mapper web interface</h1>
-       <img src="{{url_for('static', filename='images/rantanplan.gif')}}">
+       <img class="centre" src="{{url_for('static', filename='images/rantanplan.gif')}}">
        <h1>{{ text }}!</h1>
 
 {% endblock %}
