--- a/pyetl_webapp/static/css/main.css
+++ b/pyetl_webapp/static/css/main.css
@@ -19,7 +19,7 @@ thead {
   }
 h1 {
     text-align: center;
-    color: white;
+    color: blue;
     font: 2em Broadway;
     background-image: url("planche.png");
     background-repeat: no-repeat;
