--- a/pyetl_webapp/templates/script_result.html
+++ b/pyetl_webapp/templates/script_result.html
@@ -20,6 +20,7 @@
     </tbody>
     </table>
     {% if retour  %}
+    <div id="results">
     <title>resultats </title>
     <table>
     <thead>
@@ -35,5 +36,6 @@
         {% endfor %}
     </tbody>
     </table>
+    </div>
     {% endif %}
 {% endblock %}
