--- a/pyetl_webapp/templates/index.html
+++ b/pyetl_webapp/templates/index.html
@@ -4,6 +4,6 @@
 {% block content %}
        <h1>Mapper web interface</h1>
        <img class="centre" src="{{url_for('static', filename='images/rantanplan.gif')}}">
-       <h1>{{ text }}!</h1>
+       <h1>{{ text }}</h1>
 
 {% endblock %}
