--- a/pyetl_webapp/templates/scriptlist.html
+++ b/pyetl_webapp/templates/scriptlist.html
@@ -2,7 +2,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <table>
+    <div classe="container">
+    <table class="table table-bordered table-hover">
     <thead>
         <tr>
             <td>Nom/run</td>
