--- a/pyetl_webapp/templates/help.html
+++ b/pyetl_webapp/templates/help.html
@@ -2,8 +2,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="d-flex flex-row">
-       <object class="container h-100 w-100" type="text/html" data={{url_for('static', filename='doc_pyetl/build/html/index.html')}}
+    <div class="container embed-responsive-item ">
+       <iframe class="h-100 w-100" src={{url_for('static', filename='doc_pyetl/build/html/index.html')}}
       >
     </object>
     </div>
