--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -13,8 +13,9 @@
     {% block title %}{{ title }} - Mapper{% endblock %}
 {% endif %}
 {% block navbar %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  {#<nav class="navbar navbar-expand-lg navbar-light bg-light">#}
+  <div class="container">
     <a class="navbar-brand" href="/index">pyetl</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -24,15 +25,24 @@
       <li class="nav_item">
         <a class="nav-link" aria-current="page" href="/index">Home</a>
       </li>
+      <li class="nav_item">
         <a class="nav-link" href="/login">login</a>
+      </li>
       <li class="nav_item">
         <a class="nav-link" href="/scripts">scripts</a>
       </li>
+      <li class="nav_item">
         <a class="nav-link" href="/macros">macros</a>
+      </li>
+      <li class="nav_item">
         <a class="nav-link" href="/help">test_help</a>
+      </li>
+      <li class="nav_item">
         <a class="nav-link" href="{{url_for('static', filename='doc_pyetl/build/html/index.html')}}">Help</a>
-      </div>
+      </li>
+        </div>
     </div>
   </div>
 </nav>
+
 {% endblock %}
