--- a/pyetl_webapp/templates/help.html
+++ b/pyetl_webapp/templates/help.html
@@ -2,8 +2,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container embed-responsive-item ">
-       <iframe class="h-100 w-100" src={{url_for('static', filename='doc_pyetl/build/html/index.html')}}
+    <div class="h-400 container embed-responsive-item ">
+       <iframe class="h-400 w-100" src={{url_for('static', filename='doc_pyetl/build/html/index.html')}}
       >
     </object>
     </div>
