mapper web modif navigtion

--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -35,10 +35,22 @@
         <a class="nav-link" href="/macros">macros</a>
       </li>
       <li class="nav_item">
+        <a class="nav-link" href=/prep_exec/{{ url }}>exec</a>
+      </li>
+      <li class="nav_item">
+        <a class="nav-link" href=/scriptdesc/{{ url }}>infos</a>
+      </li>
+      <li class="nav_item">
+        <a class="nav-link" href=/scriptview/{{ url }}>source</a>
+      </li>
+      <li class="nav_item">
         <a class="nav-link" href="/help">test_help</a>
       </li>
       <li class="nav_item">
         <a class="nav-link" href="{{url_for('static', filename='doc_pyetl/build/html/index.html')}}">Help</a>
+      </li>
+      <li class="nav_item">
+        <a class="nav-link" href="#">{{ url }}</a>
       </li>
         </div>
     </div>
