--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -13,7 +13,7 @@
     {% block title %}{{ title }} - Mapper{% endblock %}
 {% endif %}
 {% block navbar %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
   {#<nav class="navbar navbar-expand-lg navbar-light bg-light">#}
   <div class="container">
     <a class="navbar-brand" href="/index">
@@ -52,15 +52,14 @@
       <li class="nav_item">
         <a class="nav-link" href="{{url_for('static', filename='doc_pyetl/build/html/index.html')}}">Help</a>
       </li>
+
     <form class="form-inline">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
     </form>
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">recherche</button>
-
-      <li class="navbar-brand">
-        <a class="nav-link" href="#">{{ url }}</a>
-      </li>
-        </div>
+          <button class="btn btn-secondary" type="submit">recherche</button>
+      <a class="nav-link" href="#">       </a>
+      <a class="navbar-brand" href="#">  {{ nom }}  </a>
+      </div>
     </div>
   </div>
 </nav>
