--- a/pyetl_webapp/templates/scriptlist.html
+++ b/pyetl_webapp/templates/scriptlist.html
@@ -4,6 +4,7 @@
 {% block content %}
     <div>
     <table class="table table-bordered table-hover">
+    <nav class="sticky-top">
     <thead class="sticky-top">
         <tr>
             <td>Nom/run</td>
@@ -11,6 +12,7 @@
             <td>Description</td>
         </tr>
     </thead>
+    </nav>
     <tbody>
         {% for item in liste %}
         <tr>
