--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -50,6 +50,9 @@
         <a class="nav-link" href="/help">test_help</a>
       </li>
       <li class="nav_item">
+        <a class="nav-link" href="/fmgr">fmgr</a>
+      </li>
+      <li class="nav_item">
         <a class="nav-link" href="{{url_for('static', filename='doc_pyetl/build/html/index.html')}}">Help</a>
       </li>
 
