--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -38,6 +38,9 @@
         <a class="nav-link" href="/macros">macros</a>
       </li>
       <li class="nav_item">
+        <a class="nav-link" href="/apis">services_web</a>
+      </li>
+      <li class="nav_item">
         <a class="nav-link" href=/exec/{{ url }}>exec</a>
       </li>
       <li class="nav_item">
