--- a/pyetl_webapp/templates/script_result.html
+++ b/pyetl_webapp/templates/script_result.html
@@ -12,10 +12,13 @@
     </thead>
     <tbody>
         {% for key, value in stats.items() %}
-            <tr>
-                <td>{{ key }}</td>
-                <td>{{ value }}</td>
-            </tr>
+            {%if value%}
+                <tr>
+                    <td>{{ key }}</td>
+                    <td>{{ value }}</td>
+                </tr>
+            {% endif %}
+
         {% endfor %}
     </tbody>
     </table>
