--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -1,4 +1,4 @@
-{% extends "bootstrap/base.html" %}
+# {% extends "bootstrap/base.html" %}
 {% block styles %}
 <link rel="stylesheet" href="{{url_for('.static', filename='css/bootstrap.css')}}">
 <link rel="stylesheet" href="{{url_for('.static', filename='css/main.css')}}">
