--- a/pyetl_webapp/templates/script_result.html
+++ b/pyetl_webapp/templates/script_result.html
@@ -25,6 +25,29 @@
     {% if retour  %}
     <div id="results">
     <title>resultats </title>
+    <nav class="nav nav-tabs">
+        {% for valeur in retour %}
+            <a class="nav-item nav-link active" href="#{{ valeur }}" data-toggle="tab">{{ valeur }}</a>
+        {% endfor %}
+    </nav>
+    <div class="tab-content">
+        {% for valeur in retour %}
+            <div class="tab-pane active" id="{{ valeur }}">
+            <table>
+            <tbody>
+                {% for ligne in retour[valeur] %}
+                    <tr>
+                        <td>{{ ligne }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+            </table>
+            </div>
+        {% endfor %}
+    </div>
+
+
+
     {% for valeur in retour %}
         <h2>{{ valeur }}</h2>
             <table>
