--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -1,73 +1,91 @@
-# {% extends "bootstrap/base.html" %}
-{% block styles %}
-<link rel="stylesheet" href="{{url_for('.static', filename='css/bootstrap.css')}}">
-<link rel="stylesheet" href="{{url_for('.static', filename='css/main.css')}}">
-<link rel="icon" href="{{url_for('static', filename='images/favicon.ico')}}">
+<!doctype html>
+<html lang=en>
+<head>
+{% block head %}
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="{{url_for('.static', filename='css/bootstrap.css')}}">
+  <link rel="stylesheet" href="{{url_for('.static', filename='css/main.css')}}">
+  <link rel="icon" href="{{url_for('static', filename='images/favicon.ico')}}">
+
 {% endblock %}
-{% block scripts %}
-{{super()}}
-{% endblock %}
+</head>
+<body>
+{% block body %}
+  {% block navbar %}
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    {#<nav class="navbar navbar-expand-lg navbar-light bg-light">#}
+    <div class="container">
+      <a class="navbar-brand" href="/index">
+        <img src="{{url_for('static', filename='images/favicon.ico')}}" class="d-inline-block align-center" alt="">
+        pyetl
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+        <li class="nav_item">
+          <a class="nav-link" aria-current="page" href="/index">Home</a>
+        </li>
+        <li class="nav_item">
+          <a class="nav-link" href="/login">login</a>
+        </li>
+        <li class="nav_item">
+          <a class="nav-link" href="/scripts">scripts</a>
+        </li>
+        <li class="nav_item">
+          <a class="nav-link" href="/macros">macros</a>
+        </li>
+        <li class="nav_item">
+          <a class="nav-link" href="/apis">services_web</a>
+        </li>
+        <li class="nav_item">
+          <a class="nav-link" href=/exec/{{ url }}>exec</a>
+        </li>
+        <li class="nav_item">
+          <a class="nav-link" href=/scriptdesc/{{ url }}>infos</a>
+        </li>
+        <li class="nav_item">
+          <a class="nav-link" href=/scriptview/{{ url }}>source</a>
+        </li>
+        <li class="nav_item">
+          <a class="nav-link" href="/help">test_help</a>
+        </li>
+        <li class="nav_item">
+          <a class="nav-link" href="/fmgr">fmgr</a>
+        </li>
+        <li class="nav_item">
+          <a class="nav-link" href="{{url_for('static', filename='doc_pyetl/build/html/index.html')}}">Help</a>
+        </li>
 
-
-{% if title %}
-    {% block title %}{{ title }} - Mapper{% endblock %}
-{% endif %}
-{% block navbar %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-  {#<nav class="navbar navbar-expand-lg navbar-light bg-light">#}
-  <div class="container">
-    <a class="navbar-brand" href="/index">
-      <img src="{{url_for('static', filename='images/favicon.ico')}}" class="d-inline-block align-center" alt="">
-      pyetl
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-      <li class="nav_item">
-        <a class="nav-link" aria-current="page" href="/index">Home</a>
-      </li>
-      <li class="nav_item">
-        <a class="nav-link" href="/login">login</a>
-      </li>
-      <li class="nav_item">
-        <a class="nav-link" href="/scripts">scripts</a>
-      </li>
-      <li class="nav_item">
-        <a class="nav-link" href="/macros">macros</a>
-      </li>
-      <li class="nav_item">
-        <a class="nav-link" href="/apis">services_web</a>
-      </li>
-      <li class="nav_item">
-        <a class="nav-link" href=/exec/{{ url }}>exec</a>
-      </li>
-      <li class="nav_item">
-        <a class="nav-link" href=/scriptdesc/{{ url }}>infos</a>
-      </li>
-      <li class="nav_item">
-        <a class="nav-link" href=/scriptview/{{ url }}>source</a>
-      </li>
-      <li class="nav_item">
-        <a class="nav-link" href="/help">test_help</a>
-      </li>
-      <li class="nav_item">
-        <a class="nav-link" href="/fmgr">fmgr</a>
-      </li>
-      <li class="nav_item">
-        <a class="nav-link" href="{{url_for('static', filename='doc_pyetl/build/html/index.html')}}">Help</a>
-      </li>
-
-    <form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    </form>
-          <button class="btn btn-secondary" type="submit">recherche</button>
-      <a class="nav-link" href="#">       </a>
-      <a class="navbar-brand" href="#">  {{ nom }}  </a>
+      <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      </form>
+            <button class="btn btn-secondary" type="submit">recherche</button>
+        <a class="nav-link" href="#">       </a>
+        <a class="navbar-brand" href="#">  {{ nom }}  </a>
+        </div>
       </div>
     </div>
+  </nav>
+
+  {% endblock %}
+  {% block title %}Mapper{% endblock %}
+  <div id = "content">
+  {% block content %}
+
+  {% endblock %}
   </div>
-</nav>
+{% endblock %}
+{% block scripts %}
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+			  integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+			  crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
+
 
 {% endblock %}
+</body>
+</html>
