--- a/pyetl_webapp/templates/scriptlist.html
+++ b/pyetl_webapp/templates/scriptlist.html
@@ -1,6 +1,8 @@
 
 {% extends "base.html" %}
-
+{% block title %}
+    <h1>listes </h1>
+{% endblock %}
 {% block content %}
     <div>
     <table class="table table-bordered table-hover">
