mapper_web bootstrap

--- a/pyetl_webapp/templates/intro.html
+++ b/pyetl_webapp/templates/intro.html
@@ -1,11 +1,11 @@
 
 {% extends "base.html" %}
 {% block title %}
-    <h1>aide mapper </h1>
+    <h1>introduction</h1>
 {% endblock %}
 {% block content %}
     <div class=" container-fluid vh-100 embed-responsive-item ">
-       <iframe class="h-75 w-100" src={{url_for('static', filename='doc_pyetl/build/html/index.html')}}
+       <iframe class="h-75 w-100" src={{url_for('static', filename='doc_pyetl/build/html/introduction.html')}}
       >
     </object>
     </div>
