--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -11,19 +11,21 @@
 </head>
 <body>
 {% block body %}
+  <div class="container-fluid">
   {% block navbar %}
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+  <nav class="navbar  navbar-expand-lg navbar-dark bg-dark sticky-top">
     {#<nav class="navbar navbar-expand-lg navbar-light bg-light">#}
     <div class="container">
-      <a class="navbar-brand" href="/index">
-        <img src="{{url_for('static', filename='images/favicon.ico')}}" class="d-inline-block align-center" alt="">
+      <a class="navbar-brand" href="/intro">
+        <img src="{{url_for('static', filename='images/favicon.ico')}} "
+             class="d-inline-block align-center" alt="">
         pyetl
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav nav-fill justify-content-center">
         <li class="nav_item">
           <a class="nav-link" aria-current="page" href="/index">Home</a>
         </li>
@@ -40,24 +42,11 @@
           <a class="nav-link" href="/apis">services_web</a>
         </li>
         <li class="nav_item">
-          <a class="nav-link" href=/exec/{{ url }}>exec</a>
-        </li>
-        <li class="nav_item">
-          <a class="nav-link" href=/scriptdesc/{{ url }}>infos</a>
-        </li>
-        <li class="nav_item">
-          <a class="nav-link" href=/scriptview/{{ url }}>source</a>
-        </li>
-        <li class="nav_item">
-          <a class="nav-link" href="/help">test_help</a>
+          <a class="nav-link" href="/help">help</a>
         </li>
         <li class="nav_item">
           <a class="nav-link" href="/fmgr">fmgr</a>
         </li>
-        <li class="nav_item">
-          <a class="nav-link" href="{{url_for('static', filename='doc_pyetl/build/html/index.html')}}">Help</a>
-        </li>
-
       <form class="form-inline">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       </form>
@@ -70,22 +59,29 @@
   </nav>
 
   {% endblock %}
+  <div class="position-sticky" style="top: 60px">
   {% block title %}Mapper{% endblock %}
-  <div id = "content">
+  </div>
+  <div class="container position-sticky" style="top: 20%" id = "content">
   {% block content %}
 
   {% endblock %}
   </div>
-{% endblock %}
+
 {% block scripts %}
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-			  integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
-			  crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
 
+{% endblock %}
 
 {% endblock %}
+</div>
 </body>
 </html>
