--- a/pyetl_webapp/templates/prep_exec.html
+++ b/pyetl_webapp/templates/prep_exec.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+{% block title %}<h1>lancement script {{ nom }}</h1>{% endblock %}
 
 {% block content %}
-    <h1>lancement script {{ nom }}</h1>
+
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         {% for item in varlist %}
