--- a/pyetl_webapp/templates/scriptlist.html
+++ b/pyetl_webapp/templates/scriptlist.html
@@ -7,7 +7,7 @@
     <div>
     <table class="table table-bordered table-hover">
     <nav class="position-absolute">
-    <thead class="position-sticky" style="top: 20%">
+    <thead class="position-sticky" >
         <tr>
             <td>Nom/run</td>
             <td>Date de Mise a Jour</td>
