mise en forma web

--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -62,7 +62,7 @@
   <div class="position-sticky" style="top: 60px">
   {% block title %}Mapper{% endblock %}
   </div>
-  <div class="container position-sticky" style="top: 20%" id = "content">
+  <div class="position-sticky" style="top: 100px" id = "content">
   {% block content %}
 
   {% endblock %}
