--- a/pyetl_webapp/templates/scriptlist.html
+++ b/pyetl_webapp/templates/scriptlist.html
@@ -4,7 +4,7 @@
     <h1>listes </h1>
 {% endblock %}
 {% block content %}
-    <div class="position-fixed overflow-auto" style="top: 15%">
+    <div class="container position-fixed overflow-auto" style="top: 15%">
     <table class="table table-bordered table-hover">
     <thead class="d-block" >
         <tr>
