--- a/pyetl_webapp/templates/index.html
+++ b/pyetl_webapp/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
        <div class="container-fluid">
 
-              <img class="centre" src="{{url_for('static', filename='images/rantanplan.gif')}}">
+              <img class="d-block mx-auto" src="{{url_for('static', filename='images/rantanplan.gif')}}">
               <h1>{{ text }}</h1>
        </div>
 {% endblock %}
