--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -79,6 +79,8 @@
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
 
+<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>"
+
 {% endblock %}
 
 {% endblock %}
