--- a/pyetl_webapp/templates/scriptlist.html
+++ b/pyetl_webapp/templates/scriptlist.html
@@ -8,8 +8,8 @@
     <table class="table table-bordered table-hover">
     <thead class="d-block" >
         <tr>
-            <td>Nom/run</td>
-            <td>Date de Mise a Jour</td>
+            <td>Nom(run)</td>
+            <td>{{c2}}</td>
             <td>Description</td>
         </tr>
     </thead>
