--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -59,10 +59,10 @@
   </nav>
 
   {% endblock %}
-  <div class="position-sticky" style="top: 10%">
+  <div class="position-sticky" style="top: 2cm">
   {% block title %}Mapper{% endblock %}
   </div>
-  <div class="container position-sticky" style="top: 15%" id = "content">
+  <div class="position-sticky" style="top: 3cm" id = "content">
   {% block content %}
 
   {% endblock %}
