--- a/pyetl_webapp/templates/scriptdesc.html
+++ b/pyetl_webapp/templates/scriptdesc.html
@@ -6,16 +6,20 @@
     <table>
     <thead>
         <tr>
-            <td>propriete</td>
-            <td>Description</td>
+            <th>famille</th>
+            <th>nom</th>
+            <th>Description</th>
         </tr>
     </thead>
     <tbody>
         {% for key, value in descriptif.items() %}
-            <tr>
-                <td>{{ key }}</td>
-                <td>{{ value }}</td>
-            </tr>
+            {%for nom, def in value.items()%}
+                <tr>
+                    <td>{{ key }}</td>
+                    <td>{{ nom }}</td>
+                    <td>{{ def }}</td>
+                </tr>
+            {% endfor %}
         {% endfor %}
     </tbody>
     </table>
